--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,11 +43,10 @@ jobs:
   deploy:
     needs: build
     permissions:
-      pages: write
-      id-token: write
+      contents: write
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy website
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.GITHUB_TOKEN }}
