--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types:
       - opened
+    paths-ignore:
+      - '.github/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
@@ -28,7 +30,7 @@ jobs:
         id: npm-cache
         with:
           path: "**/node_modules"
-          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
 
       - name: Install dependencies
         if: steps.npm-cache.outputs.cache-hit != 'true'
