--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/easybangumiorg/.github#readme",
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.61",
     "@vuepress/plugin-register-components": "^2.0.0-beta.61",
     "vuepress": "^2.0.0-beta.61"
   },
