--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vuepress": "^2.0.0-beta.61"
   },
   "dependencies": {
+    "artplayer": "^5.0.9",
     "marked": "^4.3.0",
     "moment": "^2.29.4",
     "vuex": "^4.0.2"
