--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   },
   "homepage": "https://github.com/easybangumiorg/.github#readme",
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.66",
-    "@vuepress/plugin-register-components": "^2.0.0-beta.66",
-    "vuepress": "^2.0.0-beta.66"
+    "vuepress": "^2.0.0-beta.68",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.68",
+    "@vuepress/plugin-register-components": "^2.0.0-beta.68"
   },
   "dependencies": {
-    "artplayer": "^5.0.9",
     "marked": "^4.3.0",
     "moment": "^2.29.4",
     "vuex": "^4.0.2"
