--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/easybangumiorg/.github#readme",
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.68",
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.68",
-    "@vuepress/plugin-register-components": "^2.0.0-beta.68"
+    "@vuepress/plugin-register-components": "^2.0.0-beta.68",
+    "@vuepress/plugin-search": "^2.0.0-beta.68",
+    "vuepress": "^2.0.0-beta.68"
   },
   "dependencies": {
     "marked": "^4.3.0",
