--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   },
   "homepage": "https://github.com/easybangumiorg/.github#readme",
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.68",
-    "@vuepress/plugin-register-components": "^2.0.0-beta.68",
-    "@vuepress/plugin-search": "^2.0.0-beta.68",
-    "vuepress": "^2.0.0-beta.68"
+    "@vuepress/bundler-vite": "^2.0.0-rc.0",
+    "@vuepress/plugin-google-analytics": "^2.0.0-rc.0",
+    "@vuepress/plugin-register-components": "^2.0.0-rc.0",
+    "@vuepress/plugin-search": "^2.0.0-rc.0",
+    "vuepress": "^2.0.0-rc.0"
   },
   "dependencies": {
     "marked": "^4.3.0",
+    "mdui": "^2.0.3",
     "moment": "^2.29.4",
     "vuex": "^4.0.2"
   }
