--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
-name: Build and deploy website
+
+name: 构建&部署文档
 
 on:
   push:
@@ -8,49 +9,38 @@ on:
       - '.github/**'
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          # submodules: true
 
-      - name: Setup Node.js
+      - name: 设置 Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20
+          cache: yarn
 
-      - name: Check cache
-        uses: actions/cache@v3
-        id: npm-cache
-        with:
-          path: "**/node_modules"
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
+      - name: 安装依赖
+        run: yarn install --frozen-lockfile
 
-      - name: Install dependencies
-        if: steps.npm-cache.outputs.cache-hit != 'true'
-        run: npm install
-
-      - name: Build website
-        run: npm run build
-
-      - name: Add .nojekyll
-        run: touch ./dist/.nojekyll
-
-      - name: Upload artifact
+      - name: 构建文档
+        env:
+          NODE_OPTIONS: --max_old_space_size=8192
+        run: |-
+          yarn run docs:build
+          > docs/.vuepress/dist/.nojekyll
+      
+      - name: 上传文档
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./dist
+          path: src/.vuepress/dist
 
   deploy:
     environment:
