--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "official website and github profiles for easybangumi app",
   "scripts": {
-    "serve": "vuepress dev src",
-    "build": "vuepress build src"
+    "dev": "vuepress dev src",
+    "build": "vuepress build src",
+    "clean-dev": "vuepress dev src --clean-cache",
+    "clean-package": "yarn cache clean --force",
+    "update-package": "yarn dlx vp-update"
   },
   "repository": {
     "type": "git",
@@ -17,15 +20,14 @@
   },
   "homepage": "https://github.com/easybangumiorg/.github#readme",
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.0",
+    "vuepress": "2.0.0-rc.0",
+    "vuepress-theme-reco": "2.0.0-rc.6",
     "@vuepress/plugin-google-analytics": "^2.0.0-rc.0",
     "@vuepress/plugin-register-components": "^2.0.0-rc.0",
-    "@vuepress/plugin-search": "^2.0.0-rc.0",
-    "vuepress": "^2.0.0-rc.0"
+    "@vuepress/plugin-search": "^2.0.0-rc.0"
   },
   "dependencies": {
     "marked": "^4.3.0",
-    "mdui": "^2.0.3",
     "moment": "^2.29.4",
     "vuex": "^4.0.2"
   }
