--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "vuepress dev src",
     "build": "vuepress build src",
     "clean-dev": "vuepress dev src --clean-cache",
-    "clean-package": "yarn cache clean --force",
-    "update-package": "yarn dlx vp-update"
+    "clean-package": "yarn cache clean --force"
   },
   "repository": {
     "type": "git",
@@ -20,14 +19,15 @@
   },
   "homepage": "https://github.com/easybangumiorg/.github#readme",
   "devDependencies": {
-    "vuepress": "2.0.0-rc.0",
-    "vuepress-theme-reco": "2.0.0-rc.6",
-    "@vuepress/plugin-google-analytics": "^2.0.0-rc.0",
-    "@vuepress/plugin-register-components": "^2.0.0-rc.0",
-    "@vuepress/plugin-search": "^2.0.0-rc.0"
+    "@vuepress/plugin-google-analytics": "^2.0.0-rc.15",
+    "@vuepress/plugin-register-components": "^2.0.0-rc.15",
+    "@vuepress/plugin-search": "^2.0.0-rc.18",
+    "vuepress": "2.0.0-rc.14",
+    "vuepress-theme-reco": "2.0.0-rc.16"
   },
   "dependencies": {
-    "marked": "^4.3.0",
+    "@types/marked": "^6.0.0",
+    "marked": "^13.0.2",
     "moment": "^2.29.4",
     "vuex": "^4.0.2"
   }
