chore: 配置yarn忽视引擎错误

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
           node-version: 20
           cache: yarn
 
+      - name: 配置yarn忽视引擎错误
+        run: yarn config set ignore-engines true
+
       - name: 安装依赖
         run: yarn install --frozen-lockfile
 
