--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,11 +37,32 @@ jobs:
         run: |-
           yarn run build
           > src/.vuepress/dist/.nojekyll
+
+      - name: 修复目录权限
+        run: |
+          chmod -c -R +rX "src/.vuepress/dist/" | while read line; do
+            echo "::warning title=Invalid file permissions automatically fixed::$line"
+          done
+
+      - name: 归档
+        shell: sh
+        if: runner.os == 'Linux'
+        run: |
+          echo ::group::Archive artifact
+          tar \
+            --dereference --hard-dereference \
+            --directory "src/.vuepress/dist/" \
+            -cvf "$RUNNER_TEMP/artifact.tar" \
+            --exclude=.git \
+            --exclude=.github \
+            .
+          echo ::endgroup::
+
       
       - name: 上传文档
         uses: actions/upload-pages-artifact@v3
         with:
-          path: src/.vuepress/dist
+          path: ${{ runner.temp }}/artifact.tar
 
   deploy:
     environment:
