--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -15,22 +15,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          # submodules: true
 
       - name: 设置 Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-          cache: yarn
+          node-version: 22
+          cache: pnpm
 
       - name: 安装依赖
         run: |-
-          yarn config set ignore-engines true
-          yarn install --frozen-lockfile
+          pnpm install --frozen-lockfile
 
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
         run: |-
-          yarn run docs:build
-          > docs/.vuepress/dist/.nojekyll
+          pnpm run build
+          > docs/.vitepress/dist/.nojekyll
