--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -22,6 +22,9 @@ jobs:
           node-version: 22
           cache: pnpm
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: 安装依赖
         run: |-
           pnpm install --frozen-lockfile
